[package]
name = "vtg"
version = "0.1.0"
edition = "2024"

[dependencies]
pcap = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
csv = "1.3"
clap = { version = "4.4", features = ["derive"] }
rust_xlsxwriter = "0.6"
indicatif = "0.18.0"
chrono = "0.4.41"
color-print = "0.3"
dhcp4r = "0.2.3"
if-addrs = "0.10"
ipconfig = "0.3"
